fixing white space

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -109,7 +109,7 @@ aside img {
 /*MAIN*/
 
 section {
-    padding-bottom: 75px;
+    padding-bottom: 35px;
 }
 
 section h2{
@@ -130,11 +130,6 @@ p{
     margin-left: 9%;
 }
 
-.myworkbox  {
-    width: 50%;
-    height: 10%;
-}
-
 .opacity:hover{
     Opacity: 0.4
 }
@@ -142,6 +137,10 @@ p{
 .work{
     border-left-style: solid;
     border-color: var(--green);
+}
+
+section .contactinfo {
+    margin-left: 52px;
 }
 
 .contactinfo h2{
@@ -175,6 +174,7 @@ p{
     background-color: var(--offwhite);
     margin-bottom: 3%;
 }
+
 #textcolor{
     color: black;
     font-family: 'Audrey', serif, sans-serif;
@@ -202,14 +202,18 @@ a:link {
     border-right: solid lightgrey;
     border-bottom: solid lightgrey;
     border-top: solid lightgrey;
-  }
+}
 
-  .card .card-image .card-title {
+.card .card-image .card-title {
     border-bottom: solid lightgrey;
     border-right: solid lightgrey;
     border-bottom: solid lightgrey;
     border-top: solid lightgrey;
-  }
+}
+
+.fa {
+    display: block !important;
+}
 
 /* FOOTER */
 
@@ -277,7 +281,7 @@ footer {
         padding-right: 10px;
     }
     
-    p{
+    p {
         margin: 20px 0 15px 0px;
         padding-bottom: 10px;
         padding-left: 10px;
@@ -291,8 +295,12 @@ footer {
         height: 10%;
     }
 
-    .contactinfo h2{
+    .contactinfo h2 {
         margin-left: 10px;
+    }
+
+    .fa {
+        display: block !important;
     }
 }
 
